Update to latest stable version

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-armadillo-0.9.52.tar.gz
-/armadillo-1.0.0.tar.gz
-/armadillo-1.2.0.tar.gz
-/armadillo-2.2.3.tar.gz
-/armadillo-3.2.4.tar.gz
-/armadillo-3.4.4.tar.gz
-/armadillo-3.6.0.tar.gz
-/armadillo-3.6.1.tar.gz
-/armadillo-3.6.2.tar.gz
-/armadillo-3.6.3.tar.gz
-/armadillo-3.800.0.tar.gz
+clog
+/armadillo-3.800.2.tar.gz
