--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
 clog
-/armadillo-3.810.0.tar.gz
-/armadillo-3.820.0.tar.gz
-/armadillo-3.900.4.tar.gz
-/armadillo-3.910.0.tar.gz
+armadillo-3.920.0.tar.gz
