--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
 clog
-/armadillo-6.700.4.tar.gz
-/armadillo-6.700.6.tar.gz
-/armadillo-7.100.3.tar.xz
-/armadillo-7.200.1.tar.xz
+armadillo-7.200.2.tar.xz
